--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "path": "^0.12.7",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.7.0",
+    "redux": "^3.5.2",
     "serve-favicon": "^2.3.0"
   },
   "devDependencies": {
@@ -25,6 +28,9 @@
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "html-webpack-plugin": "^2.22.0",
+    "redux-logger": "^2.6.1",
+    "redux-thunk": "^2.1.0",
+    "stats-webpack-plugin": "^0.4.2",
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-dev-server": "^1.15.0",
