--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "html-webpack-plugin": "^2.22.0",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
+    "nodemon": "^1.10.2",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0",
     "stats-webpack-plugin": "^0.4.2",
