--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
+    "mongoose": "^4.5.10",
     "morgan": "^1.7.0",
     "nconf": "^0.8.4",
     "path": "^0.12.7",
